# libsignal-client-rust

./: package.json
.github/workflows/: build_and_test.yml
java/java/src/main/java/org/signal/internal/: Native.java
node/: build_node_bridge.sh
rust/bridge/ffi/src/: lib.rs  util.rs
rust/bridge/jni/src/: lib.rs  util.rs
rust/bridge/node/: Cargo.toml
rust/bridge/shared/: Cargo.toml
rust/bridge/shared/src/: lib.rs
rust/bridge/shared/src/jni/: mod.rs
rust/protocol/src/state/: session.rs
rust/protocol/tests/: sealed_sender.rs
swift/: build_ffi.sh
swift/Sources/SignalFfi/: signal_ffi.h
swift/Tests/SignalClientTests/: SessionTests.swift
