#
# Copyright (C) 2020 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "libsignal-node"
version = "0.1.0"
authors = ["Jordan Rose <jrose@signal.org>", "Jack Lloyd <jack@signal.org>"]
license = "AGPL-3.0-only"
edition = "2018"

[lib]
name = "signal_node"
crate-type = ["cdylib"]

[dependencies]
libsignal-protocol-rust = { path = "../../protocol" }
signal-neon-futures = { path = "futures" }
neon = { version = "0.7.0", default-features = false, features = ["napi-1"] }
rand = "0.7.3"
